plugins {
	id 'java'
}

group = 'com.tutrit'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

tasks.withType(JavaCompile) {
	options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
	jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
	jvmArgs += "--enable-preview"
}
